@@ -53,11 +53,11 @@ pkglib_LTLIBRARIES = libsql.la
 
 pkgincdir = $(pkgincludedir)$(WITH_PATH_VERSIONED_SUFFIX)
 pkginc_HEADERS = \
-	rpmcli.h rpmversion.h rpmds.h rpmfi.h rpmps.h \
+	rpmcli.h rpmversion.h rpmds.h rpmfi.h rpmgi.h rpmps.h \
 	rpmrc.h rpmte.h rpmts.h rpm4compat.h rpm46compat.h
 noinst_HEADERS = \
 	filetriggers.h fs.h fsm.h manifest.h misc.h psm.h rpmal.h \
-	rpmfc.h rpmgi.h rpmlib.h rpmlock.h rpmluaext.h rpmrollback.h
+	rpmfc.h rpmlib.h rpmlock.h rpmluaext.h rpmrollback.h
 
 usrlibdir = $(libdir)
 usrlib_LTLIBRARIES = librpm.la
